[package]
name = "rustop"
version = "0.1.0"
edition = "2024"

[dependencies]
libproc = "0.14"  # macOS process management
sysinfo = "0.30"  # Cross-platform system info
crossterm = "0.28.1"
signal-hook = "0.3.17"
clap = { version = "4.4", features = ["derive"] }  # Command line argument parsing
serde = { version = "1.0", features = ["derive"] }  # Serialization/deserialization
toml = "0.8"  # TOML parsing
directories = "5.0"  # Finding config directories
dirs = "5.0"  # Home directory detection
